check that code works

--- a/web.env
+++ b/web.env
@@ -4,4 +4,4 @@ NODEMAILER_SERVICE=gmail
 NODEMAILER_USER=foo@gmail.com
 NODEMAILER_PASS=password
 EMAIL_FROM=foo@gmail.com
-HOST=http://localhost
+HOST=http://localhost:4000
